--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,21 +1,7 @@
 spring:
-  profiles:
-    active: default
-    datasource:
-      url: jdbc:postgresql://10.178.0.13:5432/postgresql
-      username: postgresql
-      password: postgrespassword
-    jpa:
-      show-sql: true
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        ddl-auto: update
-
----
-spring:
-  profiles: local
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgresql
+#    url: jdbc:postgresql://localhost:5432/postgresql
+    url: jdbc:postgresql://10.178.0.13:5432/postgresql
     username: postgresql
     password: postgrespassword
   jpa:
