--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,19 +1,19 @@
 spring:
-  profiles:
-    active: default
-    datasource:
-      url: jdbc:postgresql://10.178.0.13:5432/postgresql
-      username: postgresql
-      password: postgrespassword
-    jpa:
-      show-sql: true
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        ddl-auto: update
+  profiles: dev
+  datasource:
+    url: jdbc:postgresql://10.178.0.13:5432/postgresql
+    username: postgresql
+    password: postgrespassword
+  jpa:
+    show-sql: true
+    hibernate:
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: update
 
 ---
 spring:
-  profiles: local
+  profiles:
+    active: defualt
   datasource:
     url: jdbc:postgresql://localhost:5432/postgresql
     username: postgresql
