--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,8 +12,7 @@ spring:
 
 ---
 spring:
-  profiles:
-    active: defualt
+  profiles: local
   datasource:
     url: jdbc:postgresql://localhost:5432/postgresql
     username: postgresql
