--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,24 @@
 spring:
+  config:
+    activate:
+      on-profile: "dev"
   datasource:
     url: jdbc:postgresql://10.178.0.13:5432/postgresql
+    username: postgresql
+    password: postgrespassword
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      dialect: org.hibernate.dialect.PostgreSQLDialect
+      ddl-auto: update
+---
+spring:
+  config:
+    activate:
+      on-profile: "local"
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgresql
     username: postgresql
     password: postgrespassword
     driver-class-name: org.postgresql.Driver
