--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,9 @@ spring:
     activate:
       on-profile: "dev"
   datasource:
-    url: jdbc:postgresql://10.178.0.13:5432/postgresql
+    url: jdbc:postgresql://10.178.0.13:5432/postgresql?autoReconnect=true
     username: postgresql
     password: postgrespassword
-    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     hibernate:
@@ -18,10 +17,9 @@ spring:
     activate:
       on-profile: "local"
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgresql
+    url: jdbc:postgresql://localhost:5432/postgresql?autoReconnect=true
     username: postgresql
     password: postgrespassword
-    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     hibernate:
