--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,6 +6,7 @@ spring:
     url: jdbc:postgresql://10.178.0.13:5432/postgresql?autoReconnect=true
     username: postgresql
     password: postgrespassword
+    driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
     hibernate:
